# functional-py

./: pyproject.toml
functional/: option.py  reader.py  result.py
