[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "functional-py"
version = "0.1.0"
authors = [
  { name="Jean-Pierre Coetze", email="jeanpierrec19@gmail.com" },
]
description = "A functional programming library for python"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jpc0/functional-py"
"Bug Tracker" = "https://github.com/jpc0/functional-py/issues"
